# remote-whatsapp-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml.example
docker/: entrypoint.sh
docs/: connect-chatgpt.md  connect-claude.md  deploy-fly.md  oauth-workos.md
server/: main.py  pyproject.toml  wacli.py
